--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="r84-vT-JWA">
-                                <rect key="frame" x="0.0" y="0.0" width="703.5" height="80"/>
+                                <rect key="frame" x="0.0" y="20" width="703.5" height="80"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="s7g-X6-lOx"/>
@@ -136,10 +136,10 @@
                                 </cells>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JnH-Yy-lvd">
-                                <rect key="frame" x="0.0" y="80" width="703.5" height="688"/>
+                                <rect key="frame" x="0.0" y="100" width="703.5" height="668"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oUX-7Y-YhI">
-                                        <rect key="frame" x="0.0" y="0.0" width="703.5" height="688"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="703.5" height="668"/>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="250" constant="703" id="PFN-Fy-1dx"/>
                                             <constraint firstAttribute="height" priority="250" constant="688" id="vv3-Rd-7Xo"/>
@@ -165,7 +165,7 @@
                             <constraint firstItem="JnH-Yy-lvd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="U2a-24-vdk"/>
                             <constraint firstItem="r84-vT-JWA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YwB-An-bhJ"/>
                             <constraint firstItem="JnH-Yy-lvd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Zeg-Pt-nNw"/>
-                            <constraint firstItem="r84-vT-JWA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="qVf-ob-jyK"/>
+                            <constraint firstItem="r84-vT-JWA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" symbolic="YES" id="qVf-ob-jyK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
